--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Tianbao Xie # name of the site
 author: Tianbao Xie # name of site's author
 email: tianbaoxiexxx@gmail.com # email of site's author
 url: https://incredible-croquembouche-077ce7.netlify.app/ # root address of the site
-baseurl: "/no-style-please" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
+baseurl: "" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
 description: > # description of the site (multiple lines allowed)
   Some information about Tianbao Xie.
 
