--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,35 +4,22 @@
 entries:
   - title: info
     entries:
-      - title: a (nearly) no-CSS, fast, minimalist Jekyll theme.
-      - title: github repo
-        url: https://github.com/riggraz/no-style-please
-      - title: "used by <a href='https://riggraz.dev'>riggraz.dev</a> and <a href='https://github.com/riggraz/no-style-please/network/dependents'>many others</a>"
+      - title: A Ph.D. student in the University of Hong Kong, guided by Dr. <a href='https://taoyds.github.io/'>Tao Yu</a> and Dr. <a href='https://ikekonglp.github.io/'>Lingpeng Kong</a>. 
+      - title: <a href='mailto:tianbaoxiexxx@gmail.com'>Email</a>, <a href='https://github.com/timothyxxx'>GitHub</a>, <a href='https://scholar.google.com/citations?hl=en&user=8sdGK_0AAAAJ&view_op=list_works&sortby=pubdate'>Google Scholar</a>
 
-  - title: all posts
-    post_list:
-      limit: 5
-      show_more: true
-      show_more_text: See archive...
-      show_more_url: archive.html
-
-  - title: posts by category
-    post_list:
-      category: example2
-      show_more: true
-      show_more_text: See more posts...
-      show_more_url: example2-archive.html
-
-  - title: rss
-    url: feed.xml
-  
-  - title: another list
+  - title: Publications(Selected)
     entries:
-      - title: with subitems
-        entries:
-          - title: with subsubitems
-          - title: example page
-            url: about
-  - title: PRO TIP
+      - title: 2022-10, <a href='https://arxiv.org/abs/2210.02875'>Binding Language Models in Symbolic Languages</a>
+      - title: 2022-01, <a href='https://arxiv.org/abs/2201.05966'>UnifiedSKG: Unifying and Multi-Tasking Structured Knowledge Grounding with Text-to-Text Language Models</a>
+      - title: 2021-04, <a href='https://arxiv.org/abs/2103.03095'>A Survey on Spoken Language Understanding: Recent Advances and New Frontiers</a>
+   
+   - title: Awards
     entries:
-      - title: to edit this menu, edit _data/menu.yml file
+      - title: Hong Kong Ph.D. Fellowship
+      - title: China National Scholarship, 2019 & 2020
+      - title: Top-notch Student Training Plan 2.0, Excellent Student
+   
+   - title: Service
+    entries:
+      - title: Since 2021, ACL, EMNLP reviewer
+      - title: 2022-10, TA of <a href='https://python-basics-for-data-science.com/schedule/'>STAT1005 HKU</a>
