--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -10,7 +10,7 @@ entries:
   - title: Publications(Selected)
     entries:
       - title: 2022-10, <a href='https://arxiv.org/abs/2210.02875'>Binding Language Models in Symbolic Languages</a>
-      - title: 2022-01, <a href='https://arxiv.org/abs/2201.05966'>UnifiedSKG: Unifying and Multi-Tasking Structured Knowledge Grounding with Text-to-Text Language Models</a>
+      - title: 2022-01, <a href='https://arxiv.org/abs/2201.05966'>Unifying and Multi-Tasking Structured Knowledge Grounding with Text-to-Text Language Models</a>
       - title: 2021-04, <a href='https://arxiv.org/abs/2103.03095'>A Survey on Spoken Language Understanding: Recent Advances and New Frontiers</a>
    
    - title: Awards
@@ -23,3 +23,4 @@ entries:
     entries:
       - title: Since 2021, ACL, EMNLP reviewer
       - title: 2022-10, TA of <a href='https://python-basics-for-data-science.com/schedule/'>STAT1005 HKU</a>
+
