--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -9,9 +9,9 @@ entries:
 
   - title: Publications(Selected)
     entries:
-      - title: 2022-10, <a href='https://arxiv.org/abs/2210.02875'>'Binding Language Models in Symbolic Languages'</a>
-      - title: 2022-01, <a href='https://arxiv.org/abs/2201.05966'>'UnifiedSKG: Unifying and Multi-Tasking Structured Knowledge Grounding with Text-to-Text Language Models'</a>
-      - title: 2021-04, <a href='https://arxiv.org/abs/2103.03095'>'A Survey on Spoken Language Understanding: Recent Advances and New Frontiers'</a>
+      - title: 2022-10, <a href='https://arxiv.org/abs/2210.02875'> Binding Language Models in Symbolic Languages </a>
+      - title: 2022-01, <a href='https://arxiv.org/abs/2201.05966'> UnifiedSKG\: Unifying and Multi-Tasking Structured Knowledge Grounding with Text-to-Text Language Models</a>
+      - title: 2021-04, <a href='https://arxiv.org/abs/2103.03095'> A Survey on Spoken Language Understanding\: Recent Advances and New Frontiers</a>
    
    - title: Awards
     entries:
